HTML-Sistema-Loja

--- a/modulo1/html-sistema-loja/styles.css
+++ b/modulo1/html-sistema-loja/styles.css
@@ -99,3 +99,27 @@ a{
 header{
     background: rgb(175, 162, 173);
 }
+.header1{
+    text-align: center;
+}
+.header2{
+    text-align: center;
+}
+.img1{
+    width: 150px;
+}
+.img2{
+    width: 150px;
+}
+.img3{
+    width: 150px;
+}
+.img4{
+    width: 150px;
+}
+.img5{
+    width: 150px;
+}
+.img6{
+    width: 150px;
+}
