--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -129,3 +129,8 @@ td button {
 #back-button:hover {
     background-color: #635a3d
 }
+.td-img{
+    width: 50px;
+    height: 50px;
+    background: white;
+}
