--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -34,7 +34,7 @@ div>p:first-child {
 }
 
 div img {
-    background: black;
+    background: rgb(255, 255, 255);
 }
 
 .botao-amarelo {
@@ -56,7 +56,7 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    width: 17px;
 }
 
 
