--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -109,6 +109,12 @@ td button {
     border-radius: 5px;
     color: black;
 }
+td button:active{
+    color: white;
+}
+td button:hover{
+    background-color:#c44f00;
+}
 
 .container-do-search {
     margin-top: 20px;
